# clotting_model

./: .clang-format  .gitignore  ActivatedPlateletSource.cpp  ActivatedPlateletSource.h  BondSource.cpp  BondSource.h  BoundaryMeshMapping.cpp  BoundaryMeshMapping.h  CMakeLists.txt  CohesionStressRHS.cpp  CohesionStressRHS.h  Makefile  PlateletSource.cpp  PlateletSource.h  README.md  input2d  main.cpp  utility_functions.I  utility_functions.cpp  utility_functions.h
aneurysm/: CMakeLists.txt  input2d  main.cpp
aneurysm/bound/: CMakeLists.txt  WallSitesMeshMapping.cpp  input2d
aneurysm/unbound/: CMakeLists.txt
channel/: CMakeLists.txt  WallSitesMeshMapping.cpp  WallSitesMeshMapping.h  input2d  main.cpp  restart.cpp
fpc/: CMakeLists.txt  WallSitesMeshMapping.cpp  WallSitesMeshMapping.h  input2d  main.cpp
fpc/bound/: CMakeLists.txt  WallSitesMeshMapping.cpp  WallSitesMeshMapping.h  input2d  main.cpp
fpc/unbound/: CMakeLists.txt
include/clot/: BondBoundSource.h  BondSource.h  BondUnactivatedSource.h  BoundExtraStressForcing.h  BoundPlateletSource.h  BoundVelocityFunction.h  BoundVelocitySource.h  BoundaryMeshMapping.h  CellToFaceFcn.h  ClotParameters.h  CohesionStressBoundRHS.h  CohesionStressRHS.h  CohesionStressUnactivatedRHS.h  DragForce.h  DragForcing.h  PlateletSource.h  UnactivatedPlateletSource.h  app_namespaces.h  utility_functions.h
include/clot/private/: utility_functions_inc.h
src/: BondBoundSource.cpp  BondSource.cpp  BondUnactivatedSource.cpp  BoundExtraStressForcing.cpp  BoundPlateletSource.cpp  BoundVelocityFunction.cpp  BoundVelocitySource.cpp  BoundaryMeshMapping.cpp  CellToFaceFcn.cpp  ClotParameters.cpp  CohesionStressBoundRHS.cpp  CohesionStressRHS.cpp  CohesionStressUnactivatedRHS.cpp  DragForce.cpp  DragForcing.cpp  PlateletSource.cpp  UnactivatedPlateletSource.cpp  utility_functions.cpp
tests/: CMakeLists.txt
tests/aneurysm/: CMakeLists.txt  input2d  main.cpp
tests/convolution/: CMakeLists.txt  input2d  main.cpp
tests/fsi/: CMakeLists.txt  input2d  main.cpp
tests/wall_pts/: CMakeLists.txt  input2d  main.cpp
