CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)

PROJECT(Clotting LANGUAGES C CXX)
FIND_PACKAGE(IBAMR REQUIRED)
FIND_PACKAGE(ADS REQUIRED)

SET(CXX_SRC
    BondSource.cpp
    BoundaryMeshMapping.cpp
    CohesionStressRHS.cpp
    PlateletSource.cpp
    utility_functions.cpp
    )
ADD_EXECUTABLE(main2d main.cpp)
TARGET_SOURCES(main2d PRIVATE ${CXX_SRC})
TARGET_LINK_LIBRARIES(main2d IBAMR::IBAMR2d)
TARGET_LINK_LIBRARIES(main2d ADS::ADS2d)
CONFIGURE_FILE(input2d ${CMAKE_CURRENT_BINARY_DIR}/input2d COPYONLY)

ADD_SUBDIRECTORY(tests)
