SET(SRCS main.cpp
	 WallSitesMeshMapping.cpp)

ADD_EXECUTABLE(channel EXCLUDE_FROM_ALL ${SRCS})
SET_TARGET_PROPERTIES(channel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/channel" OUTPUT_NAME main2d)
TARGET_INCLUDE_DIRECTORIES(channel PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(channel PRIVATE BoundClot)
ADD_DEPENDENCIES(channel BoundClot)
