SET(SRCS main.cpp
	 WallSitesMeshMapping.cpp)

ADD_EXECUTABLE(fpc EXCLUDE_FROM_ALL ${SRCS})
SET_TARGET_PROPERTIES(fpc PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/fpc" OUTPUT_NAME main2d)
TARGET_INCLUDE_DIRECTORIES(fpc PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(fpc PRIVATE Clot)
ADD_DEPENDENCIES(fpc Clot)

CONFIGURE_FILE(input2d "${CMAKE_BINARY_DIR}/fpc/input2d" COPYONLY)
