ADD_CUSTOM_TARGET(tests)
SET(TEST_DIRECTORIES aneurysm wall_pts fsi convolution)

# Convienience macro that sets up a test
MACRO(ADD_TEST)
   SET(OPTIONS)
   SET(ONE_VALUE_ARGS TARGET_NAME OUTPUT_DIRECTORY OUTPUT_NAME GROUP)
   SET(MULTI_VALUE_ARGS SOURCES)
   CMAKE_PARSE_ARGUMENTS(EX "${OPTIONS}" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" ${ARGN})

   # sources are all sources for example plus all the main sources
   ADD_EXECUTABLE("${EX_TARGET_NAME}" EXCLUDE_FROM_ALL ${EX_SOURCES} ${NEW_CXX_SRC})
   SET_TARGET_PROPERTIES("${EX_TARGET_NAME}"
      PROPERTIES
      RUNTIME_OUTPUT_DIRECTORY
      "${EX_OUTPUT_DIRECTORY}"
      OUTPUT_NAME
      "${EX_OUTPUT_NAME}")
   # Link to Library
   TARGET_LINK_LIBRARIES("${EX_TARGET_NAME}" Clot)

   ADD_DEPENDENCIES("${EX_GROUP}" "${EX_TARGET_NAME}")

ENDMACRO()

FOREACH(_dir ${TEST_DIRECTORIES})
   ADD_SUBDIRECTORY(${_dir})
ENDFOREACH()
