SET(SRCS main.cpp
	 WallSitesMeshMapping.cpp)

ADD_EXECUTABLE(fpc-bound EXCLUDE_FROM_ALL ${SRCS})
SET_TARGET_PROPERTIES(fpc-bound PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bound/fpc" OUTPUT_NAME main2d)
TARGET_INCLUDE_DIRECTORIES(fpc-bound PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(fpc-bound PRIVATE BoundClot)
ADD_DEPENDENCIES(fpc-bound BoundClot)
ADD_DEPENDENCIES(fpc fpc-bound)
