SET(SRCS main.cpp
	 WallSitesMeshMapping.cpp)

ADD_EXECUTABLE(fpc-unbound EXCLUDE_FROM_ALL ${SRCS})
SET_TARGET_PROPERTIES(fpc-unbound PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/unbound/fpc" OUTPUT_NAME main2d)
TARGET_INCLUDE_DIRECTORIES(fpc-unbound PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(fpc-unbound PRIVATE UnboundClot)
ADD_DEPENDENCIES(fpc-unbound UnboundClot)
ADD_DEPENDENCIES(fpc fpc-unbound)
